# network-power-saver

./: .gitignore  README.md  detect.py  network-power-saver.service.example  pyproject.toml
logs/: detect.csv.example
